add Sample file to the updated file