@@ -3,13 +3,11 @@ package testBase;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.time.Duration;
 import java.util.Date;
 import java.util.Properties;
-
 
 import org.apache.commons.lang3.RandomStringUtils;
 import org.openqa.selenium.OutputType;
@@ -19,13 +17,13 @@ import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.edge.EdgeDriver;
 import org.openqa.selenium.firefox.FirefoxDriver;
+import org.openqa.selenium.remote.CapabilityType;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteWebDriver;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Parameters;
 
-import io.github.bonigarcia.wdm.WebDriverManager;
 
 import org.apache.logging.log4j.LogManager;  //Log4j
 import org.apache.logging.log4j.Logger;  //Log4j
@@ -33,13 +31,14 @@ import org.apache.logging.log4j.Logger;  //Log4j
 
 public class BaseClass {
 
-public static WebDriver driver;
+//public static WebDriver driver; //for capture screenshot make it static other wise remove static
+public WebDriver driver; 
 public Logger logger;  //Log4j
 public Properties p;
 	
 	@BeforeClass(groups= {"Sanity","Regression","Master"})
 	@Parameters({"os","browser"})
-	public void setup(String os, String br) throws IOException, URISyntaxException
+	public void setup(String os, String br) throws IOException
 	{
 		//Loading config.properties file
 		FileReader file=new FileReader("./src//test//resources//config.properties");
@@ -55,11 +54,12 @@ public Properties p;
 			//os
 			if(os.equalsIgnoreCase("windows"))
 			{
-				capabilities.setPlatform(Platform.WIN10);
+				capabilities.setPlatform(Platform.WINDOWS);
 			}
-			else if (os.equalsIgnoreCase("linux"))
+			else if(os.equalsIgnoreCase("linux"))
 			{
 				capabilities.setPlatform(Platform.LINUX);
+				
 			}
 			else if (os.equalsIgnoreCase("mac"))
 			{
@@ -74,35 +74,34 @@ public Properties p;
 			//browser
 			switch(br.toLowerCase())
 			{
-			case "chrome": WebDriverManager.chromedriver().setup();capabilities.setBrowserName("chrome");break;
+			case "chrome": capabilities.setBrowserName("chrome"); break;
 			case "edge": capabilities.setBrowserName("MicrosoftEdge"); break;
+			case "firefox": capabilities.setBrowserName("firefox"); break;
 			default: System.out.println("No matching browser"); return;
 			}
 			
-			
-			driver=new RemoteWebDriver(new URI("http://localhost:4444/wd/hub").toURL(),capabilities);
+			driver=new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"),capabilities);
 		}
 		
 				
 		if(p.getProperty("execution_env").equalsIgnoreCase("local"))
 		{
-			
+
 			switch(br.toLowerCase())
 			{
-			case "chrome" : WebDriverManager.chromedriver().setup();driver=new ChromeDriver(); break;
+			case "chrome" : driver=new ChromeDriver(); break;
 			case "edge" : driver=new EdgeDriver(); break;
 			case "firefox": driver=new FirefoxDriver(); break;
 			default : System.out.println("Invalid browser name.."); return;
 			}
-			
 		}
 		
+			
 		driver.manage().deleteAllCookies();
 		driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 		
-		driver.get(p.getProperty("appURL2")); // reading url from properties file.
+		driver.get(p.getProperty("appURL")); // reading url from properties file.
 		driver.manage().window().maximize();
-		
 	}
 	
 	@AfterClass(groups= {"Sanity","Regression","Master"})
